# service-gen

./: .gitignore  Cargo.toml  README.md
crates/common/: Cargo.toml
crates/common/src/models/: mod.rs  service_config.rs
crates/common/src/utils/: exec_config_utils.rs  file_utils.rs  gui_utils.rs  log_utils.rs  mod.rs  text_utils.rs
crates/control/: Cargo.toml  build.rs
crates/control/src/: gui.rs  main.rs  sc_utils.rs  service.rs  service_utils.rs
