[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 错误处理
anyhow = "1.0"

# 时间
chrono = "0.4"

# 文件对话框
rfd = "0.14"

# 异步运行时
tokio = { version = "1", features = ["full"] }

winapi = { version = "0.3.9", features = [
    "winuser",
    "libloaderapi",
    "minwindef",
    "windef",
    "winbase",
] }