[package]
name = "control"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }

anyhow = "1.0"

shell-words = "1.1.0"
chrono = "0.4"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
winres = "0.1"

# Windows 特定
[target.'cfg(windows)'.dependencies]
windows-service = "0.6"
winreg = "0.52"
winapi = { version = "0.3.9", features = [
    "winuser",
    "libloaderapi",
    "minwindef",
    "windef",
    "winbase",
] }
widestring = "1.0"
windows = { version = "0.52", features = [
    "Win32_System_Services",
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_Security",
] }

[[bin]]
name = "control"
path = "src/main.rs"
